--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 30%;
+    min-height: 400px;
     margin: auto;
     margin-top: 2rem;
     margin-bottom: 2rem;
@@ -25,7 +26,7 @@ body {
 
 .display-container,.pad{
     min-width: 80%;
-    min-height: 2rem;
+    min-height: 3rem;
     margin: 1rem;
     display: flex;
 }
